# zeek

./: .cirrus.star  .cirrus.yml  .cirrus.yml.disabled  .clang-format  .clang-format-ignore  .clang-tidy  .cmake-format.json  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .old-cirrus.yml  .pre-commit-config.yaml  .readthedocs.yml  .style.yapf  .travis.yml  .typos.toml  .update-changes.cfg  3.cpp  AGENTS.md  AI_POLICY.md  Bro.files  Bro.includes  BuildOptions.cmake  CHANGES  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  COPYING-3rdparty  COPYING.3rdparty  Checklist-for-Release  DocSourcesList.cmake  Dockerfile  INSTALL  Makefile  (+46 more)
aux/: Makefile.am  README
aux/adtrace/: Makefile.am  adtrace.c
aux/bdcat/: Makefile.am  bdcat.cc
aux/binpac/: COPYING  Makefile.am  autogen.sh  configure.in
aux/broccoli/: AUTHORS  COPYING  ChangeLog  Makefile.am  README  TODO  autogen.sh  broccoli-config.in  broccoli.conf  broccoli.spec  configure.in  svn.pl
aux/broctl/: Makefile.in  README  README.cmds  README.html  README.options  TODO  configure
aux/cf/: Makefile.am  cf.1  cf.c  version.c
aux/contrib/: README
aux/devel-tools/: extract-conn-by-uid  update-changes
aux/ds-util/: README
aux/hf/: Makefile.am  VERSION  gnuc.h  hf.l  nb_dns.c  nb_dns.h  nf.l  pf.l  setsignal.c  setsignal.h  strerror.c  version.c
aux/log-util/: CHANGES  COPYING  README  bro-logtool  bro2csv.py  bro2ds.sh
aux/nftools/: Makefile.am  ftwire2bro.c  nfcollector.c  nfcommon.h
aux/rst/: Makefile.am  rst.c
aux/scripts/: Makefile.am  bro-logchk.pl  ca-create  ca-issue  host-grep  host-to-addrs  hot-report  ip-grep  lock_file  mon-report  mvlog
auxil/spicy/: CMakeLists.txt  hilti-cxx-include-dirs.in  spicy-path.in
auxil/zeek-aux/: CMakeLists.txt  README  config.h.in
benchmarks/: CMakeLists.txt  double-to-str.cc  int-count-to-str.cc  ip-prefix-as-string.cc  odesc.cc
doc/: .gitignore  .readthedocs.yml  .typos.toml  CHANGES  CMakeLists.txt  INSTALL.rst  LICENSE  Makefile  Makefile.am  README  README.md  README.rst  README.txt  about.rst  acknowledgements.rst  broxygen.conf.in  building-from-source.rst  cluster-setup.rst  cluster.rst  conf.py  conf.py.in  customizations.rst  example.bro  faq.rst  file-analysis.rst  geoip.rst  get-started.rst  index.rst  input.rst  install.rst  intel.rst  log-formats.rst  logging-dataseries.rst  logging-elasticsearch.rst  logging.rst  monitoring.rst  notice.rst  notices.rst  quickstart.rst  redirects.yml  (+7 more)
doc/_static/: 960.css  basic.css  broxygen-extra.css  broxygen.css  default.css_t  download.js  pygments.css  theme_overrides.css
doc/_templates/: breadcrumbs.html  layout.html
doc/about/: architecture.rst  history.rst  index.rst  monitoring.rst  what.rst  why.rst
doc/advanced/: index.rst  subcomponents.rst  troubleshooting.rst  xdp-shunt.rst
doc/broids/: index.rst  index.rst~
doc/cluster/: index.rst  pf_ring.rst
doc/components/: index.rst
doc/configuration/: index.rst
doc/devel/: cluster-backend-zeromq.rst  conn.rst  index.rst  plugins.rst  rust-regex-backend-compat.rst  rust-regex-backend-plan.rst  rust-regex-backend.rst  websocket-api.rst
doc/ext/: adapt-toc.py  bro.py  broxygen.py  literal-emph.py  rootedliteralinclude.py  rst_directive.py  spicy-pygments.py  zeek.py  zeek_pygments.py
doc/frameworks/: broker.rst  cluster.rst  comm.rst  configuration.rst  file-analysis.rst  file_analysis_01.zeek  file_analysis_02.bro  file_analysis_03.bro  file_analysis_03.zeek  geoip.rst  index.rst  input.rst  input_json_1.zeek  intel.rst  logging-dataseries.rst  logging-elasticsearch.rst  logging-input-sqlite.rst  logging.rst  management.rst  netcontrol-1-drop-with-debug.zeek  netcontrol-2-ssh-guesser.zeek  netcontrol-4-drop.zeek  netcontrol-5-hook.bro  netcontrol-7-catch-release.zeek  netcontrol-9-skeleton.bro  netcontrol-architecture.graffle  netcontrol-openflow.graffle  netcontrol.rst  notice.rst  notice_ssh_guesser.bro  packet-analysis-1-ethernet.zeek  packet-analysis-2-llc.cc  packet-analysis.rst  signatures.rst  sqlite-read-events.bro  sqlite-read-table.bro  sqlite-read-table.zeek  storage.rst  sumstats-countconns.bro  (+8 more)
policy/: CMakeLists.txt  Makefile.am  OS-fingerprint.bro  adu.bro  alarm.bro  all.bro  anon.bro  backdoor.bro  bittorrent.bro  blaster.bro  bro.init  brolite-backdoor.bro  brolite-sigs.bro  brolite.bro  bt-tracker.bro  capture-events.bro  capture-loss.bro  capture-state-updates.bro  checkpoint.bro  clear-passwords.bro  conn-flood.bro  conn-id.bro  conn.bro  dce.bro  demux.bro  detect-protocols-http.bro  dns-anonymizer.bro  dns-ext.bro  dns-lookup.bro  dns.bro  dpd.bro  drop-adapt.bro  drop.bro  file-flush.bro  finger.bro  firewall.bro  flag-irc.bro  ftp-cmd-arg.bro  ftp-lib.bro  ftp.bro  (+81 more)
rust/: CMakeLists.txt  Cargo.toml
scripts/: CMakeLists.txt  IP4.pm  Makefile.am  README  alert_scores  all.bro  bro.cfg.example  bro.rc-hooks.sh  bro.rc.in  bro_config.in  bro_log_compress.sh  diskspace.sh  frontend-mail-reports.sh  frontend-site-report.sh  install_cron.sh  intern.bro.default  local.lite.bro  localnetMAC.pl.in  mail_notice.sh  mail_reports.sh  make-ftp-safe-vocabulary.awk  my-local.bro  my-site.bro  process_bro_logs.py  push_logs.sh  signature_scores  spot-trace  start-capture-all  test-all-policy.bro  test-all-policy.bro.rst  test-all-policy.zeek  test-all-policy.zeek.rst  test-all.bro
src/: #OpaqueVal.h#  .#OpaqueVal.h  111219-backup-DNP3.cc  ARP.cc  ARP.h  AYIYA.cc  AYIYA.h  ActivationManager.cc  ActivationManager.h  Active.cc  Active.h  Analyzer.cc  Analyzer.h  AnalyzerTags.h  Anon.cc  Anon.h  AsciiInputOutput.cc  AsciiInputOutput.h  Attr.cc  Attr.h  BPF_Program.cc  BPF_Program.h  BackDoor.cc  BackDoor.h  Base64.cc  Base64.h  BasicThread.h  BifReturnVal.cc  BifReturnVal.h  BitTorrent.cc  BitTorrent.h  BitTorrentTracker.cc  BitTorrentTracker.h  BitVector.cc  BitVector.h  BloomFilter.cc  BloomFilter.h  BroBifDoc.cc  BroBifDoc.h  BroDoc.cc  (+653 more)
testing/: .gitignore  CMakeLists.txt  Makefile  README  build_fuzz.sh  rec.bro  rec2.bro  wrong-rec.bro
(+16079 files in other folders)
